# cryptomator-extractor-rs

./: Cargo.toml  README.md
src/: main.rs  vault.rs
