[package]
name = "cryptomator-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
aes-gcm = "0.10.3"
aes-kw = "0.2.1"
aes-siv = "0.7.0"
anyhow = "1.0.79"
base32 = "0.4.0"
base64 = "0.21.5"
byteorder = "1.5.0"
cmac = "0.7.2"
hmac = "0.12.1"
jsonwebtoken = "9.2.0"
rpassword = "7.3.1"
scrypt = "0.11.0"
serde = "1.0.195"
serde_json = "1.0.111"
serde_with = { version = "3.4.0", features = ["base64"] }
sha1 = "0.10.6"
unicode-normalization = "0.1.22"
