[package]
authors = ["Hayate Nakano <nakanodesu@gmail.com>"]
description = "decrypt Cryptomator vault"
edition = "2021"
license = "MIT"
name = "cryptomator-extractor"
readme = "README.md"
repository = "https://github.com/ho-oto/cryptomator-extractor-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = "0.5.2"
aes = "0.8.3"
aes-gcm = "0.10.3"
aes-kw = "0.2.1"
aes-siv = "0.7.0"
anyhow = "1.0.79"
byteorder = "1.5.0"
clap = "4.4.14"
cmac = "0.7.2"
data-encoding = "2.5.0"
digest = "0.10.7"
jsonwebtoken = "9.2.0"
rpassword = "7.3.1"
scrypt = "0.11.0"
serde = "1.0.195"
serde_json = "1.0.111"
sha1 = "0.10.6"
url = "2.5.0"
